homarr/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: homarr
spec:
  selector:
    app: homarr
  externalTrafficPolicy: Local
  ports:
  - port: 7575
    protocol: TCP
    targetPort: 7575
  type: LoadBalancer
